--- a/index.html
+++ b/index.html
@@ -140,7 +140,19 @@
         </div>
 
         <div class="stars-separator">
-            <span>★★</span>☆☆☆☆☆☆☆☆ ⏳🏃🏼‍➡️
+            <span>★★</span>☆☆☆☆☆☆☆☆
+        </div>
+        <div class="card">
+            <h2>🔻 Day 11</h2>
+            <p>
+                <span>Required Project:</span>
+                <a class="youtube" href="https://www.youtube.com/watch?v=cARGOrtiWt4&t=2s" target="_blank">
+                <i class="fab fa-youtube"></i>YouTube
+                </a>
+            </p>
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day011/" target="_blank">
+                View My Project
+            </a>
         </div>
         <!-- أضف المزيد من الأيام هنا بنفس الشكل -->
     </div>
