--- a/index.html
+++ b/index.html
@@ -154,6 +154,142 @@
                 View My Project
             </a>
         </div>
+        <div class="card">
+            <h2>🔻 Day 12</h2>
+            <p>
+                <span>Required Project:</span>
+                <a class="youtube" href="https://www.youtube.com/watch?v=oYRda7UtuhA&t=3s" target="_blank">
+                <i class="fab fa-youtube"></i>YouTube
+                </a>
+            </p>
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day012/" target="_blank">
+                View My Project
+            </a>
+        </div>
+        <div class="card">
+            <h2>🔻 Day 13</h2>
+            <p>
+                <span>Required Project:</span>
+                <a class="youtube" href="https://youtu.be/Q22Tli-D4mw?si=A0xkM8Va77NtrA_b" target="_blank">
+                <i class="fab fa-youtube"></i>YouTube
+                </a>
+            </p>
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day013/" target="_blank">
+                View My Project
+            </a>
+        </div>
+        <div class="card">
+            <h2>🔻 Day 14</h2>
+            <p>
+                <span>Required Project:</span>
+                <a class="youtube" href="https://www.youtube.com/watch?v=SWyuQMCTxCQ" target="_blank">
+                <i class="fab fa-youtube"></i>YouTube
+                </a>
+            </p>
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day014/" target="_blank">
+                View My Project
+            </a>
+        </div>
+        <div class="card">
+            <h2>🔻 Day 15</h2>
+            <p>
+                <span>Required Project:</span>
+                <a class="youtube" href="https://www.youtube.com/watch?v=cxm5bCCa9OA&t=6s" target="_blank">
+                <i class="fab fa-youtube"></i>YouTube
+                </a>
+            </p>
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day015/" target="_blank">
+                View My Project
+            </a>
+        </div>
+        <div class="card">
+            <h2>🔻 Day 16</h2>
+            <p>
+                <span>Required Project:</span>
+                <a class="youtube" href="https://youtu.be/hVdTQWASliE?si=ZTvLP7WDIyIOayTh" target="_blank">
+                <i class="fab fa-youtube"></i>YouTube
+                </a>
+            </p>
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day016/" target="_blank">
+                View My Project
+            </a>
+        </div>
+        <div class="card">
+            <h2>🔻 Day 17</h2>
+            <p>
+                <span>Required Project:</span>
+                <a class="youtube" href="https://www.youtube.com/watch?v=Pcor8I3JPz0" target="_blank">
+                <i class="fab fa-youtube"></i>YouTube
+                </a>
+            </p>
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day017/" target="_blank">
+                View My Project
+            </a>
+        </div>
+        <div class="card">
+            <h2>🔻 Day 18</h2>
+            <p>
+                <span>Required Project:</span>
+                <a class="youtube" href="https://youtu.be/ePnJdRx1Yso?si=GJw_cOuQ22i-nEGy" target="_blank">
+                <i class="fab fa-youtube"></i>YouTube
+                </a>
+            </p>
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day018/" target="_blank">
+                View My Project
+            </a>
+        </div>
+        <div class="card">
+            <h2>🔻 Day 19</h2>
+            <p>
+                <span>Required Project:</span>
+                <a class="youtube" href="https://youtu.be/MocDiZZVJjM?si=Doop7S2qXL-n_-iY" target="_blank">
+                <i class="fab fa-youtube"></i>YouTube
+                </a>
+            </p>
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day019/" target="_blank">
+                View My Project
+            </a>
+        </div>
+        <div class="card">
+            <h2>🔻 Day 20</h2>
+            <p>
+                <span>Required Project:</span>
+                <a class="youtube" href="https://youtu.be/m3oUUs289Ng?si=dCuumks8eDE_ngwo" target="_blank">
+                <i class="fab fa-youtube"></i>YouTube
+                </a>
+            </p>
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day020/" target="_blank">
+                View My Project
+            </a>
+        </div>
+        <div class="stars-separator">
+            <span>★★★</span>☆☆☆☆☆☆☆
+        </div>
+
+        <div class="card">
+            <h2>🔻 Day 21</h2>
+            <p>
+                <span>Required Project:</span>
+                <a class="youtube" href="https://youtu.be/3_gFSTsw1MQ?si=H6B_aMUDnzKeF_Ce" target="_blank">
+                <i class="fab fa-youtube"></i>YouTube
+                </a>
+            </p>
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day021/" target="_blank">
+                View My Project
+            </a>
+        </div>
+        <div class="card">
+            <h2>🔻 Day 22</h2>
+            <p>
+                <span>Required Project:</span>
+                <a class="youtube" href="https://youtu.be/0SpkVypj8EI?si=JEN6TpBpaQp_t2nR" target="_blank">
+                <i class="fab fa-youtube"></i>YouTube
+                </a>
+            </p>
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day022/" target="_blank">
+                View My Project
+            </a>
+        </div>
         <!-- أضف المزيد من الأيام هنا بنفس الشكل -->
     </div>
 </body>
