--- a/index.html
+++ b/index.html
@@ -290,7 +290,20 @@
                 View My Project
             </a>
         </div>
+        <div class="card">
+            <h2>🔻 Day 23</h2>
+            <p>
+                <span>Required Project:</span>
+                <a class="youtube" href="https://youtu.be/Z3J5nPBx3NY?si=bOBD6AoeBuFZbLev" target="_blank">
+                <i class="fab fa-youtube"></i>YouTube
+                </a>
+            </p>
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day023/" target="_blank">
+                View My Project
+            </a>
+        </div>
         <!-- أضف المزيد من الأيام هنا بنفس الشكل -->
+
     </div>
 </body>
 </html>
