--- a/index.html
+++ b/index.html
@@ -302,8 +302,19 @@
                 View My Project
             </a>
         </div>
+        <div class="card">
+            <h2>🔻 Day 24</h2>
+            <p>
+                <span>Required Project:</span>
+                <a class="youtube" href="https://youtu.be/LIMUsLHmdRU?si=PrkkXAvfvVluHyDI" target="_blank">
+                <i class="fab fa-youtube"></i>YouTube
+                </a>
+            </p>
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day024/" target="_blank">
+                View My Project
+            </a>
+        </div>
         <!-- أضف المزيد من الأيام هنا بنفس الشكل -->
-
     </div>
 </body>
 </html>
