--- a/index.html
+++ b/index.html
@@ -314,6 +314,18 @@
                 View My Project
             </a>
         </div>
+        <div class="card">
+            <h2>🔻 Day 25</h2>
+            <p>
+                <span>Required Project:</span>
+                <a class="youtube" href="https://youtu.be/XJ1P0q0U7nM?si=CvwaERQKGuCw15Ph" target="_blank">
+                <i class="fab fa-youtube"></i>YouTube
+                </a>
+            </p>
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day025/" target="_blank">
+                View My Project
+            </a>
+        </div>
         <!-- أضف المزيد من الأيام هنا بنفس الشكل -->
     </div>
 </body>
