--- a/index.html
+++ b/index.html
@@ -326,6 +326,18 @@
                 View My Project
             </a>
         </div>
+        <div class="card">
+            <h2>🔻 Day 26</h2>
+            <p>
+                <span>Required Project:</span>
+                <a class="youtube" href="https://youtu.be/2LQWAvelX4Y?si=79GtcCDS2qmaurk8" target="_blank">
+                <i class="fab fa-youtube"></i>YouTube
+                </a>
+            </p>
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day026/" target="_blank">
+                View My Project
+            </a>
+        </div>
         <!-- أضف المزيد من الأيام هنا بنفس الشكل -->
     </div>
 </body>
