add Project Day 027

--- a/index.html
+++ b/index.html
@@ -338,7 +338,19 @@
                 View My Project
             </a>
         </div>
-        <!-- أضف المزيد من الأيام هنا بنفس الشكل -->
+        <div class="card">
+            <h2>🔻 Day 27</h2>
+            <p>
+                <span>Required Project:</span>
+                <a class="youtube" href="https://youtu.be/YL3ufzQ0QC4?si=x67FDk-YEb4bXyjk" target="_blank">
+                <i class="fab fa-youtube"></i>YouTube
+                </a>
+            </p>
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day027/" target="_blank">
+                View My Project
+            </a>
+        </div>
+        <!-- أضف المزيد من الأيام هنا بنفس الشكل --> 
     </div>
 </body>
 </html>
