--- a/index.html
+++ b/index.html
@@ -350,6 +350,18 @@
                 View My Project
             </a>
         </div>
+        <div class="card">
+            <h2>🔻 Day 27</h2>
+            <p>
+                <span>Required Project:</span>
+                <a class="youtube" href="https://youtu.be/U-CujW5OlW0?si=yY2uEU2znwu74yjr" target="_blank">
+                <i class="fab fa-youtube"></i>YouTube
+                </a>
+            </p>
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day028/" target="_blank">
+                View My Project
+            </a>
+        </div>
         <!-- أضف المزيد من الأيام هنا بنفس الشكل --> 
     </div>
 </body>
