add Project Day 029

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             </a>
         </div>
         <div class="card">
-            <h2>🔻 Day 27</h2>
+            <h2>🔻 Day 28</h2>
             <p>
                 <span>Required Project:</span>
                 <a class="youtube" href="https://youtu.be/U-CujW5OlW0?si=yY2uEU2znwu74yjr" target="_blank">
@@ -359,6 +359,18 @@
                 </a>
             </p>
             <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day028/" target="_blank">
+                View My Project
+            </a>
+        </div>
+        <div class="card">
+            <h2>🔻 Day 29</h2>
+            <p>
+                <span>Required Project:</span>
+                <a class="youtube" href="https://youtu.be/yQimoqo0-7g?si=L_4RvIxETwH9wPzi" target="_blank">
+                <i class="fab fa-youtube"></i>YouTube
+                </a>
+            </p>
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day029/" target="_blank">
                 View My Project
             </a>
         </div>
