Edit link for all day

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <i class="fab fa-youtube"></i> YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day001/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day001" target="_blank">
                 View My Project
             </a>
         </div>
@@ -38,7 +38,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day002/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day002" target="_blank">
                 View My Project
             </a>
         </div>
@@ -50,7 +50,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day003/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day003" target="_blank">
                 View My Project
             </a>
         </div>
@@ -62,7 +62,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day004/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day004" target="_blank">
                 View My Project
             </a>
         </div>
@@ -74,7 +74,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day005/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day005" target="_blank">
                 View My Project
             </a>
         </div>
@@ -86,7 +86,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day006/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day006" target="_blank">
                 View My Project
             </a>
         </div>
@@ -98,7 +98,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day007/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day007" target="_blank">
                 View My Project
             </a>
         </div>
@@ -110,7 +110,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day008/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day008" target="_blank">
                 View My Project
             </a>
         </div>
@@ -122,7 +122,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day009/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day009" target="_blank">
                 View My Project
             </a>
         </div>
@@ -134,7 +134,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day010/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day010" target="_blank">
                 View My Project
             </a>
         </div>
@@ -150,7 +150,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day011/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day011" target="_blank">
                 View My Project
             </a>
         </div>
@@ -162,7 +162,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day012/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day012" target="_blank">
                 View My Project
             </a>
         </div>
@@ -174,7 +174,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day013/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day013" target="_blank">
                 View My Project
             </a>
         </div>
@@ -186,7 +186,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day014/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day014" target="_blank">
                 View My Project
             </a>
         </div>
@@ -198,7 +198,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day015/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day015" target="_blank">
                 View My Project
             </a>
         </div>
@@ -210,7 +210,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day016/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day016" target="_blank">
                 View My Project
             </a>
         </div>
@@ -222,7 +222,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day017/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day017" target="_blank">
                 View My Project
             </a>
         </div>
@@ -234,7 +234,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day018/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day018" target="_blank">
                 View My Project
             </a>
         </div>
@@ -246,7 +246,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day019/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day019" target="_blank">
                 View My Project
             </a>
         </div>
@@ -258,7 +258,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day020/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day020" target="_blank">
                 View My Project
             </a>
         </div>
@@ -274,7 +274,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day021/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day021" target="_blank">
                 View My Project
             </a>
         </div>
@@ -286,7 +286,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day022/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day022" target="_blank">
                 View My Project
             </a>
         </div>
@@ -298,7 +298,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day023/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day023" target="_blank">
                 View My Project
             </a>
         </div>
@@ -310,7 +310,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day024/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day024" target="_blank">
                 View My Project
             </a>
         </div>
@@ -322,7 +322,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day025/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day025" target="_blank">
                 View My Project
             </a>
         </div>
@@ -334,7 +334,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day026/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day026" target="_blank">
                 View My Project
             </a>
         </div>
@@ -346,7 +346,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day027/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day027" target="_blank">
                 View My Project
             </a>
         </div>
@@ -358,7 +358,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day028/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day028" target="_blank">
                 View My Project
             </a>
         </div>
@@ -370,7 +370,7 @@
                 <i class="fab fa-youtube"></i>YouTube
                 </a>
             </p>
-            <a class="view-project" href="https://abdullahabuzaid04.github.io/Project_Day029/" target="_blank">
+            <a class="view-project" href="https://abdullahabuzaid04.github.io/Challenge-100-Days-of-HTML-CSS-Practice/Project_Day029" target="_blank">
                 View My Project
             </a>
         </div>
